<resources>
  <string name="app_name">헬스케어 올인원</string>
  <string name="label_start">시작하기</string>
  <string name="needs_confirm">확인 되었습니다.</string>
  <string name="needs_title">앱 권한 설정 안내</string>
  <string name="needs_required">(필수)</string>
  <string name="needs_sdcard">디바이스의 내부 파일에 접근합니다.</string>
  <string name="needs_sdcard_description">선택적 권한은 서비스 사용 중 필요한 시점에 동의를 받고 있습니다.</string>
  <string name="confirm">확인</string>
  <string name="label_today_drink">오늘의 수분 섭취량</string>
  <string name="label_drink_target">목표 섭취량</string>
  <string name="label_today_weather">오늘의 미세먼지</string>
  <string name="label_drink_should">남은 섭취량</string>
  <string name="label_drink_today">오늘의 섭취량</string>
  <string name="label_waterGoal">목표 수분 섭취량</string>
  <string name="label_waterGoal_description">하루 목표 섭취량을 입력해 주세요!</string>
  <string name="label_ml">ml</string>
  <string name="label_waterGoal_confirm">목표 설정 완료</string>
  <string name="toast_wrong_goal">올바른 목표치를 설정해주세요!</string>
  <string name="toast_setGoal">목표치를 설정했습니다.</string>
  <string name="label_select_drink_amount">섭취용량 선택</string>
  <string name="cancel">취소</string>
  <string name="toast_drink_water">ml를 섭취했습니다.</string>
  <string name="label_no_record">기록이 없습니다.</string>
  <string name="label_drink_total">총 섭취량</string>
  <string name="label_water_average">평균 섭취량</string>
  <string name="label_selected_day">선택 요일</string>
  <string name="label_monday">월요일</string>
  <string name="label_tuesday">화요일</string>
  <string name="label_wednesday">수요일</string>
  <string name="label_thursday">목요일</string>
  <string name="label_friday">금요일</string>
  <string name="label_saturday">토요일</string>
  <string name="label_sunday">일요일</string>
  <string name="label_sun">일</string>
  <string name="label_mon">월</string>
  <string name="label_tue">화</string>
  <string name="label_wed">수</string>
  <string name="label_thu">목</string>
  <string name="label_fri">금</string>
  <string name="label_sat">토</string>
  <string name="label_select_local">지역 선택 하기</string>
  <string name="label_change_local">지역 변경 하기</string>
  <string name="label_seoul">서울특별시</string>
  <string name="label_local_description">자신의 지역을 선택해 주세요. \n\n 매일 아침 정확한 목표 섭취량을 \n제공해 드립니다.</string>
  <string name="label_select">선택하기</string>
  <string name="toast_change_local">지역이 변경되었습니다.</string>
  <string name="toast_change_local_error">지역이 선택되지 않았습니다.</string>
  <string name="label_degree">°</string>
  <string name="label_reh">습도</string>
  <string name="label_pm10">미세먼지</string>
  <string name="label_pm25">초미세먼지</string>
  <string name="label_recommend_amount">권장 섭취량</string>
  <string name="label_settings">환경 설정</string>
  <string name="label_nfc">NFC</string>
  <string name="label_target">목표 설정</string>
  <string name="label_color_drop">물방을 색상 변경</string>
  <string name="label_dashboard">대시보드</string>
  <string name="label_todo">오늘 할 일</string>
  <string name="label_completed">임무 완료</string>
  <string name="label_task">Task</string>
  <string name="_0">0</string>
  <string name="label_add_item">아이템 추가</string>
  <string name="label_color">색상</string>
  <string name="label_icon">아이콘</string>
  <string name="label_title">제목</string>
  <string name="label_content">내용</string>
  <string name="label_type_title">제목을 입력해주세요.</string>
  <string name="label_type_content">내용을 입력해주세요.</string>
  <string name="label_date">날짜</string>
  <string name="needs_internet">네트워크를 통해 날씨 정보를 받아옵니다.</string>
  <string name="needs_nfc">NFC 태그로 부터 정보를 읽어옵니다.</string>
  <string name="label_time">시간</string>
  <string name="label_alarm">알람 시간</string>
  <string name="label_require_time">알람 시간을 선택해주세요.</string>
  <string name="label_save">저장하기</string>
  <string name="label_require_inputs">제목과 내용을 모두 입력해주세요.</string>
  <string name="label_added_todo">할 일이 추가 되었습니다.</string>
  <string name="label_refresh_weather">날씨 정보가 리프레시 되었습니다.</string>
  <string name="transition_circle">circle</string>
  <string name="transition_icon">icon</string>
  <string name="transition_title">title</string>
  <string name="transition_content">content</string>
  <string name="label_complete">임무를 완료했습니다.</string>
  <string name="label_rollback">임무를 롤백 시켰습니다.</string>
  <string name="label_take_water">수분 섭취</string>
  <string name="label_delete_todo">임무를 삭제 했습니다.</string>
  <string name="label_created_time">생성 시간</string>
  <string name="label_time_notification">푸시 알람 시간</string>
  <string name="label_change_location">지역 변경</string>
  <string name="label_daily_alarm">데일리 알람</string>
  <string name="label_edit_item">아이템 편집</string>
  <string name="label_edit">편집하기</string>
  <string name="label_nfc_title">시중에 판매중인 NFC 태그 스티커 및 공카드를 활용하여 수분 섭취를 간단하게 기록할 수 있습니다.</string>
  <string name="label_write_nfc">NFC 쓰기</string>
  <string name="label_write_instruction">NFC 쓰기 버튼을 누른 후, NFC 태그를 단말기에 태깅해주세요.</string>
  <string name="label_nfc_tag">NFC 태그</string>
  <string name="msg_require_nfc">NFC 기능과(기본모드) Android Beam을 켜주세요.</string>
  <string name="msg_wrote_nfc">NFC 태그에 데이터를 작성했습니다.</string>
  <string name="msg_wrote_nfc_failed">태그에 데이터를 작성할 수 없습니다.</string>
</resources>
