<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginBottom="15dp"
  android:foreground="?attr/selectableItemBackground"
  app:cardBackgroundColor="@color/background800"
  app:cardCornerRadius="6dp"
  app:cardElevation="8dp"
  app:contentPadding="15dp">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      tools:targetApi="lollipop">

      <ImageView
        android:id="@+id/circle"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_centerInParent="true"
        android:src="@drawable/circle"
        android:tint="@color/waterBlue"
        android:transitionName="@string/transition_circle" />

      <ImageView
        android:id="@+id/icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_sunny_day"
        android:tint="@color/white"
        android:transitionName="@string/transition_icon" />
    </RelativeLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="25dp"
      android:orientation="vertical">

      <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white_two"
        android:textSize="19sp"
        android:textStyle="bold"
        android:transitionName="@string/transition_title"
        tools:targetApi="lollipop"
        tools:text="Drinking water" />

      <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white_70"
        android:textSize="15sp"
        android:textStyle="bold"
        android:transitionName="@string/transition_content"
        tools:targetApi="lollipop"
        tools:text="drink 250ml coffee" />

      <LinearLayout
        android:id="@+id/layout_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:src="@drawable/ic_time" />

        <TextView
          android:id="@+id/time"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:layout_marginStart="5dp"
          android:textColor="@color/white_70"
          android:textSize="14sp"
          android:textStyle="bold"
          tools:text="10:00 AM" />
      </LinearLayout>
    </LinearLayout>
  </LinearLayout>
</androidx.cardview.widget.CardView>