<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@color/background"
  android:orientation="vertical"
  tools:context=".view.ui.todo.TodoDetailActivity">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@color/background"
    android:padding="10dp"
    tools:targetApi="lollipop">

    <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true">

      <ImageView
        android:id="@+id/circle"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_centerInParent="true"
        android:src="@drawable/circle"
        android:tint="@color/waterBlue"
        android:transitionName="@string/transition_circle" />

      <ImageView
        android:id="@+id/circle_icon"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_centerInParent="true"
        android:scaleType="fitXY"
        android:tint="@color/white"
        android:transitionName="@string/transition_icon" />
    </RelativeLayout>
  </RelativeLayout>

  <TextView
    android:id="@+id/detail_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:gravity="center"
    android:textColor="@color/white_two"
    android:textSize="19sp"
    android:textStyle="bold"
    android:transitionName="@string/transition_title"
    tools:targetApi="lollipop"
    tools:text="Drinking water" />

  <TextView
    android:id="@+id/detail_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:gravity="center"
    android:textColor="@color/white_70"
    android:textSize="15sp"
    android:textStyle="bold"
    android:transitionName="@string/transition_content"
    tools:targetApi="lollipop"
    tools:text="drink 250ml coffee" />

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:layout_marginTop="80dp"
      android:orientation="horizontal">

      <com.skydoves.elasticviews.ElasticFloatingActionButton
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_create"
        app:backgroundTint="@color/colorPrimaryDark"
        app:elevation="0dp"
        app:fabSize="normal" />

      <com.skydoves.elasticviews.ElasticFloatingActionButton
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:src="@drawable/ic_check"
        app:backgroundTint="@color/colorPrimaryDark"
        app:elevation="0dp"
        app:fabSize="normal" />
    </LinearLayout>
  </RelativeLayout>
</LinearLayout>