<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_set_goal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_flag" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/label_waterGoal"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/label_waterGoal_description"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginRight="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_glass0"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/waterGaol"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:maxLines="1"
                android:textColor="#ffffff"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/label_ml"
                android:textColor="#3d95c9"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/waterGaol_confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:background="@drawable/primary_gradient"
            android:text="@string/label_waterGoal_confirm"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="64dp" />
</LinearLayout>
